--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            2D Game Engine Development
+            2D Game Engine Development - Prithvi's Version
         </title>
     </head>
     <body>
