Added background and tileset assets

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -26,8 +26,14 @@
 
       <!-- Create Canvas -->
       <canvas id="main_canvas" width="850" height="460"></canvas>
-
     </div>
+
+    <!-- Load Sprite Assets -->
+    <img id="knightmare_background_1" class="sprite" src="/Games/Knightmare/assets/sea-background.png" />
+    <img id="green_plains_tileset" class="sprite" src="/Games/Knightmare/assets/green-plains-tileset.png" />
+    <img id="player_knight_sprite_sheet" class="sprite" src="/Games/Knightmare/assets/player_knight_sprite_sheet.png" />
+
+
 
 </body>
 
