Added frames for knight run animation, added PlayerMoveController to player sprite to enable movement.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -82,6 +82,9 @@
 
     <!-- Load Game Scripts -->
     <script src="js/Constants/Constants.js"></script>
+    <script src="js/Controllers/Player/PlayerMoveController.js"></script>
+
+
 
     <!-- Load Game -->
     <script src="js/knightmare.js"></script>
