--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -35,6 +35,8 @@
     <img id="knightmare_background_1" class="sprite" src="assets/sea-background.png" />
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
     <img id="player_knight_sprite_sheet" class="sprite" src="assets/player_knight_sprite_sheet_merged.png" />
+    <img id="enemy_sprite_sheet" class="sprite" src="assets/enemies_sprite_sheet.png" />
+
 
 
     <!-- Load Engine Scripts -->
