Added a SlimeMoveController to allow slime enemy to move across the screen.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -85,6 +85,8 @@
     <!-- Load Game Scripts -->
     <script src="js/Constants/Constants.js"></script>
     <script src="js/Controllers/Player/PlayerMoveController.js"></script>
+    <script src="js/Controllers/Enemies/SlimeMoveController.js"></script>
+
 
 
 
