Added function in AnimatedSpriteArtist to get the current take name. Added code in PlayerMoveController so that an enemy dies only when it makes contact with the player's sword. Added MyGameStateManager.js file and implemented player health. Whenever an enemy makes contact with the player sprite (apart from the sword), it decreases the player's health. The player sprite is removed when the health reaches 0.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -84,6 +84,9 @@
 
     <!-- Load Game Scripts -->
     <script src="js/Constants/Constants.js"></script>
+    
+    <script src="js/Managers/MyGameStateManager.js"></script>
+
     <script src="js/Controllers/Player/PlayerMoveController.js"></script>
     <script src="js/Controllers/Enemies/SlimeMoveController.js"></script>
 
