Added code to push back player sprite whenever player gets damaged by enemy. Added skeleton code for a spawn manager to spawn multiple enemies at random positions within a certain interval.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -86,6 +86,8 @@
     <script src="js/Constants/Constants.js"></script>
     
     <script src="js/Managers/MyGameStateManager.js"></script>
+    <script src="js/Managers/SpawnManager.js"></script>
+
 
     <script src="js/Controllers/Player/PlayerMoveController.js"></script>
     <script src="js/Controllers/Enemies/SlimeMoveController.js"></script>
