Updated enemy data in Constants file to add new bat enemy sprites.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -57,7 +57,9 @@
     <img id="knightmare_background_1" class="sprite" src="assets/sea-background.png" />
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
     <img id="player_knight_sprite_sheet" class="sprite" src="assets/Knight.png" />
-    <img id="enemy_sprite_sheet" class="sprite" src="assets/enemies_sprite_sheet.png" />
+    <img id="enemy_sprite_sheet_1" class="sprite" src="assets/enemies_sprite_sheet_1.png" />
+    <img id="enemy_sprite_sheet_2" class="sprite" src="assets/enemies_sprite_sheet_2.png" />
+
 
 
 
