--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -116,6 +116,8 @@
 
     <script src="js/Controllers/Player/PlayerMoveController.js"></script>
     <script src="js/Controllers/Enemies/SlimeMoveController.js"></script>
+    <script src="js/Controllers/Enemies/BatMoveController.js"></script>
+
 
 
 
