Added pause button and health bar sprites, as well as the MyUIManager.js class to manage UI elements.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -55,10 +55,19 @@
 
     <!-- Load Sprite Assets -->
     <img id="knightmare_background_1" class="sprite" src="assets/sea-background.png" />
+    <img id="knightmare_background_2" class="sprite" src="assets/snowy-mountains-background.jpg" />
+
+
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
     <img id="player_knight_sprite_sheet" class="sprite" src="assets/Knight.png" />
     <img id="enemy_sprite_sheet_1" class="sprite" src="assets/enemies_sprite_sheet_1.png" />
     <img id="enemy_sprite_sheet_2" class="sprite" src="assets/enemies_sprite_sheet_2.png" />
+
+    <img id="pause_button" class="sprite" src="assets/pause-button.png" />
+    <img id="hearts" class="sprite" src="assets/hearts.png" />
+
+
+
 
 
 
@@ -111,6 +120,8 @@
     
     <script src="js/Managers/MyGameStateManager.js"></script>
     <script src="js/Managers/MyMenuManager.js"></script>
+    <script src="js/Managers/MyUIManager.js"></script>
+
     <script src="js/Managers/SpawnManager.js"></script>
 
 
