Added text which displays the current level on the screen. Added a game over menu and created a new notification action to display the game over menu whenever the player's health hits 0.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -45,6 +45,11 @@
         <div id="control_menu" class="menu hidden">
             <h1>This is the control menu!</h1>
         </div>
+
+        <!-- Game Over Menu -->
+        <div id="game_over_menu" class="menu hidden">
+            <h1>Game Over!</h1>
+        </div>
         
 
       </div>
