Added a game over menu, along with the code to implement a restart button, so that the game restarts from the beginning level when the button is clicked.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -49,6 +49,7 @@
         <!-- Game Over Menu -->
         <div id="game_over_menu" class="menu hidden">
             <h1>Game Over!</h1>
+            <li><a href="javascript:void(0)" class="button restart">Restart</a></li>
         </div>
         
 
