--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -87,6 +87,10 @@
     <img id="pause_button" class="sprite" src="assets/pause-button.png" />
     <img id="hearts" class="sprite" src="assets/hearts.png" />
 
+    <!-- Load Audio Assets -->
+    <audio preload="auto" id="background" src="assets/sound/background/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3"></audio>
+
+
 
 
 
