Added health potion pickups that increase player health by 20 when picked up. A controller is attached to the potion sprite to make it drop down to the ground from the sky, and despawns after a few seconds if it isn't picked up.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -86,6 +86,9 @@
 
     <img id="pause_button" class="sprite" src="assets/pause-button.png" />
     <img id="hearts" class="sprite" src="assets/hearts.png" />
+    <img id="health_potion" class="sprite" src="assets/health-potion.png" />
+
+
 
     <!-- Load Audio Assets -->
     <audio preload="auto" id="background" src="assets/sound/background/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3"></audio>
@@ -153,6 +156,8 @@
     <script src="js/Controllers/Player/PlayerMoveController.js"></script>
     <script src="js/Controllers/Enemies/SlimeMoveController.js"></script>
     <script src="js/Controllers/Enemies/BatMoveController.js"></script>
+    <script src="js/Controllers/Pickups/HealthPotionDropController.js"></script>
+
 
 
 
