Added a Main Menu button inside the pause and game over menus, which takes you back to the main menu and restarts the game when pressed.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -35,7 +35,7 @@
             <h1>Knightmare</h1>
             <ul>
                 <li><a href="javascript:void(0)" class="button play">Start Game</a></li>
-                <li><a href="javascript:void(0)" id="audio_button" class="button">Toggle Audio</a></li>
+                <li><a href="javascript:void(0)" class="button audio_button">Toggle Audio</a></li>
                 <li><a href="javascript:void(0)" class="button control">Control Menu</a></li>
                 <li><a href="javascript:void(0)" class="button exit">Exit Game</a></li>
             </ul>
@@ -59,12 +59,16 @@
         <div id="game_over_menu" class="menu hidden">
             <h1>Game Over!</h1>
             <li><a href="javascript:void(0)" class="button restart">Restart</a></li>
+            <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
         </div>
 
         <!-- Pause Menu -->
         <div id="pause_menu" class="menu hidden">
             <h1>PAUSED</h1>
             <li><a href="javascript:void(0)" class="button resume">Resume</a></li>
+            <li><a href="javascript:void(0)" class="button audio_button">Toggle Audio</a></li>
+            <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
+
         </div>
         
 
