Added new enemy sprite (Fiery Skull) and added code to spawn this enemy type on either side of the canvas. The next skull enemy will not spawn unless the existing one is killed by the player.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -84,9 +84,13 @@
 
 
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
+
     <img id="player_knight_sprite_sheet" class="sprite" src="assets/Knight.png" />
+
     <img id="enemy_sprite_sheet_1" class="sprite" src="assets/enemies_sprite_sheet_1.png" />
     <img id="enemy_sprite_sheet_2" class="sprite" src="assets/enemies_sprite_sheet_2.png" />
+    <img id="enemy_sprite_sheet_3" class="sprite" src="assets/fiery_skull_sprite_sheet.png" />
+
 
     <img id="pause_button" class="sprite" src="assets/pause-button.png" />
     <img id="hearts" class="sprite" src="assets/hearts.png" />
