Added SkullShootController that is attached to the Fiery Skull enemy sprite, enabling the enemy to shoot fireballs at regular intervals. The behaviour of the fireball is coded in FireballController.js, which specifies a certain duration for which the enemy charges it's attack, and then fires the fireball towards the player.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -91,6 +91,9 @@
     <img id="enemy_sprite_sheet_2" class="sprite" src="assets/enemies_sprite_sheet_2.png" />
     <img id="enemy_sprite_sheet_3" class="sprite" src="assets/fiery_skull_sprite_sheet.png" />
 
+    <img id="fireball_sprite_sheet" class="sprite" src="assets/fireball.png" />
+
+
 
     <img id="pause_button" class="sprite" src="assets/pause-button.png" />
     <img id="hearts" class="sprite" src="assets/hearts.png" />
@@ -164,6 +167,11 @@
     <script src="js/Controllers/Player/PlayerMoveController.js"></script>
     <script src="js/Controllers/Enemies/SlimeMoveController.js"></script>
     <script src="js/Controllers/Enemies/BatMoveController.js"></script>
+    <script src="js/Controllers/Enemies/SkullShootController.js"></script>
+
+    <script src="js/Controllers/Projectiles/FireballController.js"></script>
+
+
     <script src="js/Controllers/Pickups/HealthPotionDropController.js"></script>
 
 
