Added a third level to the game. Fixed issue in SoundManager.js where the pause function would not recognise the audio cue.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -81,6 +81,7 @@
     <!-- Load Sprite Assets -->
     <img id="knightmare_background_1" class="sprite" src="assets/sea-background.png" />
     <img id="knightmare_background_2" class="sprite" src="assets/snowy-mountains-background.jpg" />
+    <img id="knightmare_background_3" class="sprite" src="assets/distant-castle-background.png" />
 
 
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
@@ -103,6 +104,8 @@
 
     <!-- Load Audio Assets -->
     <audio preload="auto" id="background" src="assets/sound/background/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3"></audio>
+    <audio preload="auto" id="menu_music" src="assets/sound/background/menu_music.mp3"></audio>
+
 
 
 
