Added sound effects for jump, hit, player hurt, and fireballs. Added new function in SoundManager to pause all audio, along with a notification action.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -105,13 +105,13 @@
     <!-- Load Audio Assets -->
     <audio preload="auto" id="background" src="assets/sound/background/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3"></audio>
     <audio preload="auto" id="menu_music" src="assets/sound/background/menu_music.mp3"></audio>
-
-
-
-
-
-
-
+    <audio preload="auto" id="jump" src="assets/sound/effects/jump.wav"></audio>
+    <audio preload="auto" id="hit" src="assets/sound/effects/hit.wav"></audio>
+    <audio preload="auto" id="hurt" src="assets/sound/effects/hurt.wav"></audio>
+    <audio preload="auto" id="pickup" src="assets/sound/effects/pickup.wav"></audio>
+    <audio preload="auto" id="fireball_charge" src="assets/sound/effects/fireballCharge.wav"></audio>
+    <audio preload="auto" id="explosion" src="assets/sound/effects/explosion.wav"></audio>
+    <audio preload="auto" id="fireball_shoot" src="assets/sound/effects/fireballShoot.wav"></audio>
 
 
     <!-- Load Engine Scripts -->
