Added game over sound effect, and added new sprite for bat enemies in level 3.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -112,6 +112,8 @@
     <audio preload="auto" id="fireball_charge" src="assets/sound/effects/fireballCharge.wav"></audio>
     <audio preload="auto" id="explosion" src="assets/sound/effects/explosion.wav"></audio>
     <audio preload="auto" id="fireball_shoot" src="assets/sound/effects/fireballShoot.wav"></audio>
+    <audio preload="auto" id="game_over" src="assets/sound/effects/gameOver.wav"></audio>
+
 
 
     <!-- Load Engine Scripts -->
