--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -62,6 +62,13 @@
             <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
         </div>
 
+        <!-- Win Menu -->
+        <div id="win_menu" class="menu hidden">
+            <h1>Congratulations,</h1>
+            <h1>You Survived!</h1>
+            <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
+        </div>
+
         <!-- Pause Menu -->
         <div id="pause_menu" class="menu hidden">
             <h1>PAUSED</h1>
@@ -113,6 +120,8 @@
     <audio preload="auto" id="explosion" src="assets/sound/effects/explosion.wav"></audio>
     <audio preload="auto" id="fireball_shoot" src="assets/sound/effects/fireballShoot.wav"></audio>
     <audio preload="auto" id="game_over" src="assets/sound/effects/gameOver.wav"></audio>
+    <audio preload="auto" id="win" src="assets/sound/effects/win.wav"></audio>
+
 
 
 
