Updated body background image and changed canvas size.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -20,8 +20,7 @@
 
 <body>
 
-    <div id = "title">
-      <h1>Knightmare</h1>
+    <div id = "background_image">
     </div>
 
     <div id = "game_window" class = "wrapper">
@@ -65,7 +64,7 @@
         <!-- Win Menu -->
         <div id="win_menu" class="menu hidden">
             <h1>Congratulations,</h1>
-            <h1>You Survived!</h1>
+            <h1>You Survived The Knightmare!</h1>
             <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
         </div>
 
@@ -82,7 +81,7 @@
       </div>
 
       <!-- Create Canvas -->
-      <canvas id="main_canvas" width="850" height="460"></canvas>
+      <canvas id="main_canvas" width="850" height="424"></canvas>
     </div>
 
     <!-- Load Sprite Assets -->
@@ -92,6 +91,8 @@
 
 
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
+    <img id="dungeon_tileset" class="sprite" src="assets/dungeon-tileset.png" />
+
 
     <img id="player_knight_sprite_sheet" class="sprite" src="assets/Knight.png" />
 
