Updated Constants.js file with enemy and pickup spawn data, and added more comments in the controller classes and managers.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -56,7 +56,7 @@
 
         <!-- Game Over Menu -->
         <div id="game_over_menu" class="menu hidden">
-            <h1>Game Over!</h1>
+            <h1>You Have Died</h1>
             <li><a href="javascript:void(0)" class="button restart">Restart</a></li>
             <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
         </div>
