Updated control menu and added a button to return to the main menu.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -51,6 +51,9 @@
             <h2>A- Move Left</h2>
             <h2>D- Move Right</h2>
             <h2>Spacebar- Jump</h2>
+            <h2>Move towards enemies with your sword to kill them.</h2>
+            <h2>Making contact with enemies without your sword will damage you!</h2>
+            <li><a href="javascript:void(0)" class="button return_main_menu">Main Menu</a></li>
 
         </div>
 
