Added asset references inside html and css files.

--- a/Games/Knightmare/knightmare.html
+++ b/Games/Knightmare/knightmare.html
@@ -88,34 +88,46 @@
     </div>
 
     <!-- Load Sprite Assets -->
+
+    <!-- Reference: https://assetstore.unity.com/packages/2d/characters/sunny-land-103349 -->
     <img id="knightmare_background_1" class="sprite" src="assets/sea-background.png" />
+
+    <!-- Reference: https://www.gameart2d.com/winter-platformer-game-tileset.html -->
     <img id="knightmare_background_2" class="sprite" src="assets/snowy-mountains-background.jpg" />
+
+    <!-- Reference: https://in.pinterest.com/pin/496029346454301602/ -->
     <img id="knightmare_background_3" class="sprite" src="assets/distant-castle-background.png" />
 
-
+    <!-- Reference: https://assetstore.unity.com/packages/2d/characters/sunny-land-103349 -->
     <img id="green_plains_tileset" class="sprite" src="assets/green-plains-tileset.png" />
-    <img id="dungeon_tileset" class="sprite" src="assets/dungeon-tileset.png" />
-
 
     <img id="player_knight_sprite_sheet" class="sprite" src="assets/Knight.png" />
 
+    <!-- Reference: https://opengameart.org/content/16x16-16x24-32x32-rpg-enemies-updated -->
     <img id="enemy_sprite_sheet_1" class="sprite" src="assets/enemies_sprite_sheet_1.png" />
-    <img id="enemy_sprite_sheet_2" class="sprite" src="assets/enemies_sprite_sheet_2.png" />
     <img id="enemy_sprite_sheet_3" class="sprite" src="assets/fiery_skull_sprite_sheet.png" />
 
+    <!-- Reference: https://opengameart.org/content/8-bit-fantasy -->
+    <img id="enemy_sprite_sheet_2" class="sprite" src="assets/enemies_sprite_sheet_2.png" />
+
+    <!-- Reference: https://opengameart.org/content/spell-animation-spritesheets -->
     <img id="fireball_sprite_sheet" class="sprite" src="assets/fireball.png" />
 
-
-
     <img id="pause_button" class="sprite" src="assets/pause-button.png" />
+
+    <!-- Reference: https://in.pinterest.com/pin/728386939715233678/ -->
     <img id="hearts" class="sprite" src="assets/hearts.png" />
+
+    <!-- Reference: http://pixelartmaker.com/art/a8fa1696b2eadfd -->
     <img id="health_potion" class="sprite" src="assets/health-potion.png" />
 
 
 
     <!-- Load Audio Assets -->
+
+    <!-- Reference: https://www.fesliyanstudios.com/royalty-free-music/download/retro-platforming/454 -->
     <audio preload="auto" id="background" src="assets/sound/background/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3"></audio>
-    <audio preload="auto" id="menu_music" src="assets/sound/background/menu_music.mp3"></audio>
+
     <audio preload="auto" id="jump" src="assets/sound/effects/jump.wav"></audio>
     <audio preload="auto" id="hit" src="assets/sound/effects/hit.wav"></audio>
     <audio preload="auto" id="hurt" src="assets/sound/effects/hurt.wav"></audio>
@@ -123,10 +135,12 @@
     <audio preload="auto" id="fireball_charge" src="assets/sound/effects/fireballCharge.wav"></audio>
     <audio preload="auto" id="explosion" src="assets/sound/effects/explosion.wav"></audio>
     <audio preload="auto" id="fireball_shoot" src="assets/sound/effects/fireballShoot.wav"></audio>
+
+    <!-- Reference: https://freesound.org/people/EVRetro/sounds/533034/ -->
     <audio preload="auto" id="game_over" src="assets/sound/effects/gameOver.wav"></audio>
+
+    <!-- Reference: https://freesound.org/people/LittleRobotSoundFactory/sounds/270333/ -->
     <audio preload="auto" id="win" src="assets/sound/effects/win.wav"></audio>
-
-
 
 
     <!-- Load Engine Scripts -->
